# grub-editor-cpp

./: .gitignore  CMakeLists.txt  helloworld.kdev4  org.kde.helloworld.desktop  org.kde.helloworld.json  org.kde.helloworld.metainfo.xml
android/: AndroidManifest.xml
src/: CMakeLists.txt  app.cpp  cli.cpp  cli.h  data.cpp  data.h  helloworldconfig.kcfgc  main.cpp
src/contents/ui/: About.qml  main.qml
src/tests/: CMakeLists.txt  getvalue.cpp  getvalue.h
src/tests/testCaseFiles/: commented.txt
